--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"MvcMovieContext": "Server=localhost\\SQLEXPRESS;Database=MvcMovieContext;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MvcMovieContext": "Data Source=SQL5052.site4now.net;Initial Catalog=DB_9FE067_rcaldwell67;User Id=DB_9FE067_rcaldwell67_admin;Password=Misha!23;",
+    "SportsDataContext": "Data Source=SQL5052.site4now.net;Initial Catalog=DB_9FE067_rcaldwell67;User Id=DB_9FE067_rcaldwell67_admin;Password=Misha!23;",
     //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Sports;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SportsStatsContext": "Data Source=SQL5052.site4now.net;Initial Catalog=DB_9FE067_rcaldwell67;User Id=DB_9FE067_rcaldwell67_admin;Password=Misha!23;",
     "TeamsContext": "Data Source=SQL5052.site4now.net;Initial Catalog=DB_9FE067_rcaldwell67;User Id=DB_9FE067_rcaldwell67_admin;Password=Misha!23;",
