--- a/appsettings_SQLite.json
+++ b/appsettings_SQLite.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Data Source=MvcMovie.db"
+    "SportsDataContext": "Data Source=SportsData.db"
   }
 }
