--- a/web - Copy.config
+++ b/web - Copy.config
@@ -9,7 +9,7 @@
         modules="AspNetCoreModule" resourceType="Unspecified" />
     </handlers>
     <aspNetCore processPath="dotnet"
-                arguments=".\MvcMovie.dll"
+                arguments=".\SportsData.dll"
                 stdoutLogEnabled="false"
                 stdoutLogFile=".\logs\stdout"
                 forwardWindowsAuthToken="false" />
