--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MvcMovie": {
+    "SportsData": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
